# RW-demo

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  vcpkg.json
RW++/: circle.cpp  debuggeo.cpp  draw_poller.cpp  glm_fix.h  icon.rc  level.cpp  main.cpp  pipelines.cpp  pipelines.h  rendering.h  scene.cpp  scene.h  simpleCollider.cpp  textures.cpp  textures.h  uniforms.h
RW++/custom/: bodychunk.h  custom.h  geometry.h  matrix.h
RW++/shaders/: basic_sprite.frag  basic_sprite.vert  level.frag  level.vert
libgui/: libgui.h  libgui_barriers.h  libgui_imgui.h  libgui_init.h  libgui_pipeline.h  libgui_utils.h  libgui_vkutils.h  libgui_vma.h  wlog.h
test/: test_room_geometry.cpp
